--- a/aboutMe/View/Base.lproj/LaunchScreen.storyboard
+++ b/aboutMe/View/Base.lproj/LaunchScreen.storyboard
@@ -7,11 +7,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Poppins-Bold.ttf">
-            <string>Poppins-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
@@ -21,18 +16,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ABOUT ME Moe Steinmueller" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcL-5c-BvZ">
-                                <rect key="frame" x="27.5" y="392" width="359" height="112"/>
-                                <fontDescription key="fontDescription" name="Poppins-Bold" family="Poppins" pointSize="40"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aboutMeImage" translatesAutoresizingMaskIntoConstraints="NO" id="9PJ-9b-vmT">
+                                <rect key="frame" x="87" y="339" width="240" height="218"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YellowGreen"/>
                         <constraints>
-                            <constraint firstItem="BcL-5c-BvZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ouP-FN-aNf"/>
-                            <constraint firstItem="BcL-5c-BvZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="pHQ-oI-JkD"/>
+                            <constraint firstItem="9PJ-9b-vmT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="2jg-Eh-Zho"/>
+                            <constraint firstItem="9PJ-9b-vmT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="295" id="6dX-N7-OVV"/>
+                            <constraint firstItem="9PJ-9b-vmT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Fgn-sZ-IDe"/>
+                            <constraint firstItem="9PJ-9b-vmT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="x1M-u6-wY7"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -42,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="aboutMeImage" width="166" height="166"/>
         <namedColor name="YellowGreen">
             <color red="0.90588235294117647" green="0.91764705882352937" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
